Rewrite about page content

--- a/posts/notice/about.mdx
+++ b/posts/notice/about.mdx
@@ -1,7 +1,7 @@
 ---
-title: 关于真红小站
+title: 真红小站简介
 banner: '/assets/81320307_p0.jpg'
-description: '这里是真红小站（失落小站）, 一个galgame资源站, (包括visual novel, 黄油, psp, krkr, ons gal资源 等), 收录了大部分的汉化galgame, 大部分的生肉galgame资源。'
+description: '真红小站提供丰富的 galgame 资源，包括汉化与原版游戏，并致力于打造清晰易用的分享平台。'
 date: 2025-03-04
 authorUid: 1
 authorName: 'shinnku'
@@ -10,57 +10,34 @@ authorHomepage: 'https://github.com/shinnku-nikaidou'
 pin: true
 ---
 
-# Next.js & HeroUI Template
+# 欢迎来到真红小站
 
-This is a template for creating applications using Next.js 14 (app directory) and HeroUI (v2).
+真红小站（又名失落小站）创建的初衷是为了整合散落在网络中的 **galgame** 资源，方便玩家快速找到自己感兴趣的作品。本站收录了大量汉化与生肉作品，覆盖 PC、PSP、krkr、ONS 等不同平台。
 
-[Try it on CodeSandbox](https://githubbox.com/heroui-inc/heroui/next-app-template)
+## 网站特点
 
-## Technologies Used
+- **资源齐全**：持续整理并更新各类视觉小说与黄油资源，力求覆盖主流及冷门作品。
+- **分类清晰**：按平台、语言及发行年代等维度进行归档，方便检索。
+- **界面简洁**：采用自研的前端框架，支持暗色模式及移动端浏览。
+- **社区互动**：欢迎用户在评论区分享体验或提供补档与汉化建议。
 
-- [Next.js 14](https://nextjs.org/docs/getting-started)
-- [HeroUI v2](https://heroui.com/)
-- [Tailwind CSS](https://tailwindcss.com/)
-- [Tailwind Variants](https://tailwind-variants.org)
-- [TypeScript](https://www.typescriptlang.org/)
-- [Framer Motion](https://www.framer.com/motion/)
-- [next-themes](https://github.com/pacocoursey/next-themes)
+## 使用说明
 
-## How to Use
+1. 在页面顶部的搜索栏输入游戏名称，可快速定位资源页面。
+2. 进入游戏详情后，可查看截图、简介及下载链接。
+3. 若下载链接失效，请在评论区反馈，我们会尽快补档。
 
-### Use the template with create-next-app
+## 更新与维护
 
-To create a new project based on this template using `create-next-app`, run the following command:
+本站由个人维护，更新频率取决于站长的空闲时间和网络状况。为了保证下载体验，我们会定期检查链接、修复失效的文件，并根据社区反馈补充新资源。
 
-```bash
-npx create-next-app -e https://github.com/heroui-inc/next-app-template
-```
+## 声明
 
-### Install dependencies
+所有资源均来自互联网收集，仅供学习与交流使用。请在下载后的 24 小时内删除文件，若您喜欢某个作品，请支持正版，购买官方渠道的游戏或周边。
 
-You can use one of them `npm`, `yarn`, `pnpm`, `bun`, Example using `npm`:
+如果您是版权方，认为本站内容侵权，请通过作者主页提供的联系方式告知，我们将立即处理。
 
-```bash
-npm install
-```
+## 结语
 
-### Run the development server
-
-```bash
-npm run dev
-```
-
-### Setup pnpm (optional)
-
-If you are using `pnpm`, you need to add the following code to your `.npmrc` file:
-
-```bash
-public-hoist-pattern[]=*@heroui/*
-```
-
-After modifying the `.npmrc` file, you need to run `pnpm install` again to ensure that the dependencies are installed correctly.
-
-## License
-
-Licensed under the [MIT license](https://github.com/heroui-inc/next-app-template/blob/main/LICENSE).
+感谢您的访问和支持，希望真红小站能帮助您找到心仪的作品。若有任何建议或问题，欢迎留言交流。
 
