docs: expand Fuse algorithm explanation

--- a/frontend/posts/notice/backend-tech-stack.mdx
+++ b/frontend/posts/notice/backend-tech-stack.mdx
@@ -32,7 +32,7 @@ pin: false
 
 ## 文件索引与搜索
 
-- 自定义的 **Fuse** 模块：基于 Bitap 算法实现模糊匹配，支持多字段权重搜索。
+- 自定义的 **Fuse** 模块：基于 Bitap 位图算法实现模糊匹配。创建搜索词时先计算字母掩码，在匹配阶段按位滑动比对并计算误差分数，同时允许为不同字段指定权重，最终按综合得分对结果排序。
 - **Rayon**：作为默认特性用于并行处理搜索列表，加速批量查询。
 - **Crossbeam-utils**：在可选 `async` 特性下提供并发工具。
 - 搜索索引由 `alg::search` 模块构建，利用 `generate_tree` 将对象存储中的文件列表
