chore: remove HeroUI from frontend

--- a/frontend/posts/notice/tech-stack.mdx
+++ b/frontend/posts/notice/tech-stack.mdx
@@ -22,8 +22,6 @@ pin: false
 - **pnpm**：高效的包管理工具，利用软链接和缓存减少安装时间与磁盘占用。
 
 ## 组件与样式
-
-- **HeroUI v2**：主要的组件库，涵盖按钮、输入框、导航栏等常用组件，默认与 Tailwind CSS 风格一致。
 - **Tailwind CSS**：原子化 CSS 框架，结合 `@tailwindcss/typography` 和 `tailwind-variants` 进行主题扩展与变体管理。
 - **next-themes**：提供暗色和亮色模式切换，用户可根据偏好选择主题。
 - **Framer Motion**：在页面交互和元素切换中引入流畅的动画效果。
@@ -42,4 +40,4 @@ pin: false
 
 ## 总结
 
-依托以上技术栈，真红小站在保持界面美观的同时，也兼顾了性能和开发效率。Next.js 的服务器渲染能力使内容加载更快，Tailwind CSS 与 HeroUI 提供了丰富的 UI 组件，而 TypeScript、ESLint 等工具保证了代码的可维护性。未来项目也会持续跟进社区的更新与最佳实践，不断完善站点体验。
+依托以上技术栈，真红小站在保持界面美观的同时，也兼顾了性能和开发效率。Next.js 的服务器渲染能力使内容加载更快，Tailwind CSS 提供了丰富的 UI 组件，而 TypeScript、ESLint 等工具保证了代码的可维护性。未来项目也会持续跟进社区的更新与最佳实践，不断完善站点体验。
