--- a/frontend/posts/notice/about.mdx
+++ b/frontend/posts/notice/about.mdx
@@ -1,7 +1,9 @@
 ---
 title: 真红小站简介
 banner: '/assets/81320307_p0.jpg'
-description: '真红小站提供丰富的 galgame 资源，包括汉化与原版游戏，并致力于打造清晰易用的分享平台。'
+description:
+  '真红小站提供丰富的 galgame
+  资源，包括汉化与原版游戏，并致力于打造清晰易用的分享平台。'
 date: 2025-03-04
 authorUid: 1
 authorName: 'shinnku'
@@ -12,7 +14,8 @@ pin: true
 
 # 欢迎来到真红小站
 
-真红小站（又名失落小站）创建的初衷是为了整合散落在网络中的 **galgame** 资源，方便玩家快速找到自己感兴趣的作品。本站收录了大量汉化与生肉作品，覆盖 PC、PSP、krkr、ONS 等不同平台。
+真红小站（又名失落小站）创建的初衷是为了整合散落在网络中的 **galgame**
+资源，方便玩家快速找到自己感兴趣的作品。本站收录了大量汉化与生肉作品，覆盖 PC、PSP、krkr、ONS 等不同平台。
 
 ## 网站特点
 
@@ -40,4 +43,3 @@ pin: true
 ## 结语
 
 感谢您的访问和支持，希望真红小站能帮助您找到心仪的作品。若有任何建议或问题，欢迎留言交流。
-
