--- a/frontend/posts/notice/backend-tech-stack.mdx
+++ b/frontend/posts/notice/backend-tech-stack.mdx
@@ -1,8 +1,10 @@
 ---
 title: 真红小站后端技术栈
-banner: '/assets/81320307_p0.jpg'
-description: '介绍本站后端使用的 Rust 技术栈，涵盖框架、异步运行时、数据存储及搜索算法等内容。'
-date: 2025-03-06
+banner: '/assets/rust-social-wide-light.svg'
+description:
+  '介绍本站后端使用的 Rust
+  技术栈，涵盖框架、异步运行时、数据存储及搜索算法等内容。'
+date: 2025-07-01
 authorUid: 1
 authorName: 'shinnku'
 authorAvatar: 'https://avatars.githubusercontent.com/u/74663709?v=4'
@@ -10,11 +12,8 @@ authorHomepage: 'https://github.com/shinnku-nikaidou'
 pin: false
 ---
 
-# 后端技术栈概览
-
-真红小站的后端采用 **Rust** 构建，核心框架为 [Axum](https://github.com/tokio-rs/axum)。
-配合 Tokio 异步运行时，能够高效地处理大量并发请求。下文将按模块详细说明主要依赖
-库及其作用。
+真红小站的后端采用 **Rust** 构建，核心框架为
+[Axum](https://github.com/tokio-rs/axum)。配合 Tokio 异步运行时，能够高效地处理大量并发请求。下文将按模块详细说明主要依赖库及其作用。
 
 ## Web 框架与基础库
 
@@ -32,11 +31,8 @@ pin: false
 
 ## 文件索引与搜索
 
-- 自定义的 **Fuse** 模块：基于 Bitap 位图算法实现模糊匹配。创建搜索词时先计算字母掩码，在匹配阶段按位滑动比对并计算误差分数，同时允许为不同字段指定权重，最终按综合得分对结果排序。
-- **Rayon**：作为默认特性用于并行处理搜索列表，加速批量查询。
-- **Crossbeam-utils**：在可选 `async` 特性下提供并发工具。
-- 搜索索引由 `alg::search` 模块构建，利用 `generate_tree` 将对象存储中的文件列表
-  组合成可供查询的树结构，并聚合为 `SearchList` 以供前端调用。
+- 自定义的 **Fuse**
+  模块：基于 Bitap 位图算法实现模糊匹配。创建搜索词时先计算字母掩码，在匹配阶段按位滑动比对并计算误差分数，同时允许为不同字段指定权重，最终按综合得分对结果排序。
 
 ## 路由与业务逻辑
 
@@ -46,6 +42,4 @@ pin: false
 
 ## 总结
 
-得益于 Rust 的内存安全与高性能特性，真红小站后端在保持低资源占用的同时，
-依然能提供稳定可靠的服务。Axum 与 Tokio 构成的异步生态让开发者可以专注于业务实
-现，配合自研的搜索算法和 Redis 缓存，既保证了数据查询速度，也方便未来的功能扩展。
+得益于 Rust 的内存安全与高性能特性，真红小站后端在保持低资源占用的同时，依然能提供稳定可靠的服务。Axum 与 Tokio 构成的异步生态让开发者可以专注于业务实现，配合自研的搜索算法和 Redis 缓存，既保证了数据查询速度，也方便未来的功能扩展。
